--- a/Left/Base.lproj/LaunchScreen.storyboard
+++ b/Left/Base.lproj/LaunchScreen.storyboard
@@ -17,16 +17,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Left" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wzg-NM-m9b">
-                                <rect key="frame" x="285" y="289" width="30" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wzg-NM-m9b">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" red="0.45075602799999998" green="0.48172455310000001" blue="0.62745100259999997" alpha="0.24540751690000001" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LeftLogoNavBar.png" translatesAutoresizingMaskIntoConstraints="NO" id="Hj0-J1-8A8">
+                                <rect key="frame" x="278" y="277" width="45" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="45" id="4dt-Yp-Q1E"/>
+                                    <constraint firstAttribute="height" constant="45" id="I5m-D6-gy5"/>
+                                    <constraint firstAttribute="width" constant="45" id="SYN-dS-wl2"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Hj0-J1-8A8" firstAttribute="centerX" secondItem="Wzg-NM-m9b" secondAttribute="centerX" id="Idz-ev-F5r"/>
+                            <constraint firstItem="Hj0-J1-8A8" firstAttribute="centerY" secondItem="Wzg-NM-m9b" secondAttribute="centerY" id="JiJ-1t-3La"/>
                             <constraint firstItem="Wzg-NM-m9b" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Kpf-PG-YB5"/>
+                            <constraint firstItem="Wzg-NM-m9b" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="WQK-L8-YUV"/>
+                            <constraint firstItem="Wzg-NM-m9b" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="jkg-Rd-yQG"/>
                             <constraint firstItem="Wzg-NM-m9b" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="zw1-hH-10u"/>
                         </constraints>
                     </view>
@@ -36,4 +49,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LeftLogoNavBar.png" width="100" height="100"/>
+    </resources>
 </document>
