--- a/Left/Base.lproj/Main.storyboard
+++ b/Left/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -207,10 +207,6 @@
                                     </mask>
                                 </variation>
                             </label>
-                            <activityIndicatorView hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Vs1-fK-X1W">
-                                <rect key="frame" x="-10" y="-10" width="20" height="20"/>
-                                <color key="color" red="0.59999999999999998" green="0.20000000000000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            </activityIndicatorView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Ingredient #1" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="vAg-aZ-aon">
                                 <rect key="frame" x="-25" y="-30" width="97" height="30"/>
                                 <color key="backgroundColor" red="0.45075602804570464" green="0.48172455306623274" blue="0.62745100259999997" alpha="0.24540751689189189" colorSpace="calibratedRGB"/>
@@ -366,9 +362,7 @@
                             <constraint firstItem="vAg-aZ-aon" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="7oX-UY-6rL"/>
                             <constraint firstItem="0QO-6k-Zvb" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="BmN-h9-dUo"/>
                             <constraint firstItem="efG-PO-wYd" firstAttribute="top" secondItem="dul-bJ-R7s" secondAttribute="bottom" id="C9h-QA-Hne"/>
-                            <constraint firstItem="Vs1-fK-X1W" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="CRG-sP-P7O"/>
                             <constraint firstItem="BYI-h9-5Lo" firstAttribute="width" secondItem="tsR-hK-woN" secondAttribute="width" id="CXg-zz-0uH"/>
-                            <constraint firstItem="KQZ-1w-vlD" firstAttribute="centerX" secondItem="Vs1-fK-X1W" secondAttribute="centerX" id="GdP-p4-qkS"/>
                             <constraint firstItem="gfb-br-Mm9" firstAttribute="centerX" secondItem="vAg-aZ-aon" secondAttribute="centerX" id="Gsz-eh-jFd"/>
                             <constraint firstItem="KQZ-1w-vlD" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" id="K7A-1R-tRw"/>
                             <constraint firstItem="R7N-Ew-qdL" firstAttribute="centerX" secondItem="BYI-h9-5Lo" secondAttribute="centerX" id="MMR-O3-Q2J"/>
@@ -379,21 +373,19 @@
                             <constraint firstItem="BYI-h9-5Lo" firstAttribute="top" secondItem="0QO-6k-Zvb" secondAttribute="bottom" constant="1.5" id="V5d-bP-s8A">
                                 <variation key="widthClass=compact" constant="0.0"/>
                             </constraint>
-                            <constraint firstItem="Vs1-fK-X1W" firstAttribute="top" secondItem="dul-bJ-R7s" secondAttribute="bottom" constant="4" id="Vbd-3g-H3k"/>
                             <constraint firstItem="gfb-br-Mm9" firstAttribute="top" secondItem="KQZ-1w-vlD" secondAttribute="bottom" constant="23" id="aGa-ua-sbN"/>
                             <constraint firstItem="vAg-aZ-aon" firstAttribute="top" secondItem="gfb-br-Mm9" secondAttribute="bottom" constant="22" id="ar2-Zu-IOn"/>
-                            <constraint firstItem="Vs1-fK-X1W" firstAttribute="centerY" secondItem="tsR-hK-woN" secondAttribute="centerY" id="fZd-7d-mRW"/>
                             <constraint firstItem="efG-PO-wYd" firstAttribute="width" secondItem="tsR-hK-woN" secondAttribute="width" id="h8M-On-ZP7"/>
                             <constraint firstItem="vAg-aZ-aon" firstAttribute="width" secondItem="tsR-hK-woN" secondAttribute="width" id="iEg-fP-E6L"/>
                             <constraint firstItem="KQZ-1w-vlD" firstAttribute="leading" secondItem="vAg-aZ-aon" secondAttribute="leading" id="kbH-ZA-7PY"/>
                             <constraint firstItem="BYI-h9-5Lo" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="mbZ-l0-tCg"/>
+                            <constraint firstItem="KQZ-1w-vlD" firstAttribute="width" secondItem="tsR-hK-woN" secondAttribute="width" id="q69-ZO-MPi"/>
                             <constraint firstItem="dul-bJ-R7s" firstAttribute="top" secondItem="vAg-aZ-aon" secondAttribute="bottom" id="rQg-Xe-2PX"/>
                             <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="R7N-Ew-qdL" secondAttribute="bottom" constant="75" id="z6c-cO-Mmc"/>
                             <constraint firstItem="0QO-6k-Zvb" firstAttribute="width" secondItem="tsR-hK-woN" secondAttribute="width" id="zSp-2D-UvK"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
-                                <exclude reference="Vs1-fK-X1W"/>
                                 <exclude reference="vAg-aZ-aon"/>
                                 <exclude reference="dul-bJ-R7s"/>
                                 <exclude reference="efG-PO-wYd"/>
@@ -403,9 +395,6 @@
                                 <exclude reference="R7N-Ew-qdL"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="CRG-sP-P7O"/>
-                                <exclude reference="Vbd-3g-H3k"/>
-                                <exclude reference="fZd-7d-mRW"/>
                                 <exclude reference="BmN-h9-dUo"/>
                                 <exclude reference="OCr-hC-hUG"/>
                                 <exclude reference="zSp-2D-UvK"/>
@@ -424,15 +413,14 @@
                                 <exclude reference="MMR-O3-Q2J"/>
                                 <exclude reference="Gsz-eh-jFd"/>
                                 <exclude reference="aGa-ua-sbN"/>
-                                <exclude reference="GdP-p4-qkS"/>
                                 <exclude reference="K7A-1R-tRw"/>
                                 <exclude reference="kbH-ZA-7PY"/>
+                                <exclude reference="q69-ZO-MPi"/>
                                 <exclude reference="z6c-cO-Mmc"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
-                                <include reference="Vs1-fK-X1W"/>
                                 <include reference="vAg-aZ-aon"/>
                                 <include reference="dul-bJ-R7s"/>
                                 <include reference="efG-PO-wYd"/>
@@ -442,9 +430,6 @@
                                 <include reference="R7N-Ew-qdL"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="CRG-sP-P7O"/>
-                                <include reference="Vbd-3g-H3k"/>
-                                <include reference="fZd-7d-mRW"/>
                                 <include reference="BmN-h9-dUo"/>
                                 <include reference="OCr-hC-hUG"/>
                                 <include reference="zSp-2D-UvK"/>
@@ -463,9 +448,9 @@
                                 <include reference="MMR-O3-Q2J"/>
                                 <include reference="Gsz-eh-jFd"/>
                                 <include reference="aGa-ua-sbN"/>
-                                <include reference="GdP-p4-qkS"/>
                                 <include reference="K7A-1R-tRw"/>
                                 <include reference="kbH-ZA-7PY"/>
+                                <include reference="q69-ZO-MPi"/>
                                 <include reference="z6c-cO-Mmc"/>
                             </mask>
                         </variation>
@@ -479,7 +464,6 @@
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
-                        <outlet property="activityIndicator" destination="Vs1-fK-X1W" id="OlG-gX-YVP"/>
                         <outlet property="ingredient1" destination="vAg-aZ-aon" id="eOA-Ud-gni"/>
                         <outlet property="ingredient2" destination="dul-bJ-R7s" id="n6I-oq-0yy"/>
                         <outlet property="ingredient3" destination="efG-PO-wYd" id="zig-i1-5bi"/>
